Fix HTML formatting and update profile image source

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- Profile Section -->
       <div id="profile-section">
-        <img src="images/yago.png" alt="Profile" class="profileimg">
+        <img src="yago.png" alt="Profile" class="profileimg">
         <h2 class="name">Tara Alyanna Yago</h2>
         <p class="selftitle" id="jobTitle">Entrepreneur/Cybersecurity Professional</p>
         <button id="editTitleBtn" class="box">Edit Job Title</button>
@@ -107,3 +107,4 @@
 
 </body>
 </html>
+
