--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div class="navigation">
     <h2>
       <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#1">1</a>
-      <a href="#2">2</a>
-      <a href="#3">3</a>
+      <a href="#1">Lab 2</a>
+      <a href="#2">Lab 3</a>
+      <a href="#3">Lab 4</a>
     </h2>
   </div>
   <hr>
@@ -107,4 +107,5 @@
 
 </body>
 </html>
+
 
