--- a/yago_lab1.htm
+++ b/yago_lab1.htm
@@ -23,7 +23,7 @@
 
 <td>
 <div id="home">
-<img src="src/shared image.jpeg" alt=" Image Profile" width="200" height="200"/>
+<img src="yago.png" alt=" Image Profile" width="200" height="200"/>
 <h2>Tara Alyanna Yago</h2>
 <span>Web Developer</span>
 
@@ -106,3 +106,4 @@ Email:<br><input type="email" name="email">
 </div>
 </body>
 </html>
+
