--- a/yago_lab3.html
+++ b/yago_lab3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Profile Page</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylelab3.css">
 </head>
 <body class="hero">
 
@@ -27,7 +27,7 @@
 
       <!-- Profile Section -->
       <div id="profile-section">
-        <img src="images/yago.png" alt="Profile" class="profileimg">
+        <img src="yago.png" alt="Profile" class="profileimg">
         <h2 class="name">Tara Alyanna Yago</h2>
         <span class="selftitle">Entrepreneur / Cybersecurity Professional</span>
       </div>
@@ -96,3 +96,4 @@
 
 </body>
 </html>
+
