Revise navigation links and clean up HTML
Updated navigation links and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   <div class="navigation">
     <h2>
       <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#1">Lab 2</a>
-      <a href="#2">Lab 3</a>
-      <a href="#3">Lab 4</a>
+      <a href="yago_lab1.htm">Lab 2</a>
+      <a href="yago_lab3.html">Lab 3</a>
     </h2>
   </div>
   <hr>
@@ -107,5 +106,6 @@
 
 </body>
 </html>
+
 
 
