Update navigation links and add new sections

--- a/yago_lab2.htm
+++ b/yago_lab2.htm
@@ -9,8 +9,9 @@
 <div>
 
 <h2>
-<a href="#home">Home</a> |
-<a href="#about">About Me</a>
+<a href="#myprofilepage">My Profile Page</a> |
+<a href="#yago_lab3.html">Lab 3</a>
+<a href="index.html">Lab 4</a>
 </h2>
 </div>
 <hr>
@@ -106,4 +107,5 @@ Email:<br><input type="email" name="email">
 </div>
 </body>
 </html>
+
 
