--- a/yago_lab3.html
+++ b/yago_lab3.html
@@ -12,9 +12,8 @@
   <div class="navigation">
     <h2>
       <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#1">1</a>
-      <a href="#2">2</a>
-      <a href="#3">3</a>
+      <a href="#yago_lab2.htm">Lab 2</a> |
+      <a href="#index.html">Lab 4</a> |
     </h2>
   </div>
   <hr>
@@ -96,4 +95,5 @@
 
 </body>
 </html>
+
 
