Fix HTML formatting and add missing elements

--- a/yago_lab2.htm
+++ b/yago_lab2.htm
@@ -10,8 +10,8 @@
 
 <h2>
 <a href="#myprofilepage">My Profile Page</a> |
-<a href="#yago_lab3.html">Lab 3</a>
-<a href="index.html">Lab 4</a>
+<a href="#yago_lab3.html">Lab 3</a> |
+<a href="index.html">Lab 4</a> |
 </h2>
 </div>
 <hr>
@@ -107,5 +107,6 @@ Email:<br><input type="email" name="email">
 </div>
 </body>
 </html>
+
 
 
