Fix HTML structure and update links

--- a/yago_lab3.html
+++ b/yago_lab3.html
@@ -12,7 +12,7 @@
   <div class="navigation">
     <h2>
       <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#yago_lab2.htm">Lab 2</a> |
+      <a href="#yago_lab2.html">Lab 2</a> |
       <a href="#index.html">Lab 4</a> |
     </h2>
   </div>
@@ -95,5 +95,6 @@
 
 </body>
 </html>
+
 
 
