--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <!-- Navigation -->
   <div class="navigation">
     <h2>
-      <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#yago_lab2.htm">Lab 2</a> |
-      <a href="#yago_lab3.html">Lab 3</a> |
+      <a href="yago_lab2.htm">Lab 2</a> |
+      <a href="yago_lab3.html">Lab 3</a> |
     </h2>
   </div>
   <hr>
@@ -106,6 +105,7 @@
 
 </body>
 </html>
+
 
 
 
