--- a/yago_lab2.html
+++ b/yago_lab2.html
@@ -10,7 +10,7 @@
 
 <h2>
   <a href="#myprofilepage">My Profile Page</a> |
-  <a href="#yago_lab3.html">Lab 3</a> |
+  <a href="yago_lab3.html">Lab 3</a> |
   <a href="index.html">Lab 4</a> |
 </h2>
 </div>
@@ -107,6 +107,7 @@ Email:<br><input type="email" name="email">
 </div>
 </body>
 </html>
+
 
 
 
