Fix HTML formatting and structure

--- a/yago_lab3.html
+++ b/yago_lab3.html
@@ -12,8 +12,8 @@
   <div class="navigation">
     <h2>
       <a href="#myprofilepage">My Profile Page</a> |
-      <a href="#yago_lab2.html">Lab 2</a> |
-      <a href="#index.html">Lab 4</a> |
+      <a href="yago_lab2.html">Lab 2</a> |
+      <a href="index.html">Lab 4</a> |
     </h2>
   </div>
   <hr>
@@ -95,6 +95,7 @@
 
 </body>
 </html>
+
 
 
 
