--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Navigation -->
   <div class="navigation">
     <h2>
+      <a href="#home">Home</a>
       <a href="yago_lab2.htm">Lab 2</a> |
       <a href="yago_lab3.html">Lab 3</a> |
     </h2>
@@ -105,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
