--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- Navigation -->
   <div class="navigation">
     <h2>
-      <a href="#home">Home</a>
-      <a href="yago_lab2.htm">Lab 2</a> |
+      <a href="#home">Home</a> |
+      <a href="yago_lab2.html">Lab 2</a> |
       <a href="yago_lab3.html">Lab 3</a> |
     </h2>
   </div>
@@ -106,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
